Fix animation on mobiles

--- a/styles.css
+++ b/styles.css
@@ -6,36 +6,38 @@ body {
     min-height: 100vh;
     background-color: #000;
     margin: 0;
+    padding: 10px;
     color: #FAF9F6;
     font-family: monospace;
 }
 
 /* Styling for console text and blinking underscore */
 .console-container {
-    display: flex;
-    font-size: 40px;
+    font-size: 24px;
+    font-family: monospace;
+    color: #FAF9F6;
+    display: inline-block;
 }
 
 #text {
-    color: #fff;
+    display: inline;
 }
 
-.console-underscore {
-    display: inline-block;
-    color: #fff;
-    animation: blink 0.5s infinite;
+.no-cursor #cursor {
+    display: none;
 }
 
-.console-underscore.hidden {
-    visibility: hidden;
+/* Blinking cursor */
+#cursor {
+    display: inline;
+    animation: blink 0.5s steps(1) infinite;
 }
 
-/* Blinking animation */
 @keyframes blink {
-    0% { opacity: 1; }
+    0%, 100% { opacity: 1; }
     50% { opacity: 0; }
-    100% { opacity: 1; }
 }
+
 
 /* Style for keyboard-like appearance */
 .key {
@@ -48,4 +50,10 @@ body {
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
     font-size: 0.9em;
     font-weight: bold;
+}
+
+.creed {
+    font-family: 'Termina', sans-serif;
+    font-size: 100px;
+    color: #a54550;
 }
